# qchatgpt

./: .gitignore  CMakeLists.txt  README.md  app.qrc  chatgpt_zh_CN.ts  chatgptconfig.cpp  chatgptconfig.h  fileutil.cpp  fileutil.h  httprequest.cpp  httprequest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mk_i18n.bat  settingdialog.cpp  settingdialog.h  updatetextworker.cpp  updatetextworker.h
datas/: data.txt  string.txt
